--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.1.9",
     "lucide": "^0.378.0",
     "lucide-react": "^0.378.0",
